--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:text="Enter Date"
         android:gravity="center"
         android:id="@+id/etDate"
-        android:textSize="25sp"
+        android:textSize="25sp"/>
 
 
 
